<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:stretchColumns="*">

        <TableRow>

            <Button
                android:id="@+id/button_1"
                style="?android:attr/borderlessButtonStyle"
                android:layout_height="80dp"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:text="@string/button_1"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/button_2"
                style="?android:attr/borderlessButtonStyle"
                android:layout_height="80dp"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:text="@string/button_2"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/button_3"
                style="?android:attr/borderlessButtonStyle"
                android:layout_height="80dp"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:text="@string/button_3"
                android:textSize="30sp"/>

        </TableRow>


        <TableRow>

            <Button
                android:id="@+id/button_4"
                style="?android:attr/borderlessButtonStyle"
                android:layout_height="80dp"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:text="@string/button_4"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/button_5"
                style="?android:attr/borderlessButtonStyle"
                android:layout_height="80dp"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:text="@string/button_5"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/button_6"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:text="@string/button_6"
                android:textSize="30sp"/>

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button_7"
                style="?android:attr/borderlessButtonStyle"
                android:layout_height="80dp"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:text="@string/button_7"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/button_8"
                style="?android:attr/borderlessButtonStyle"
                android:layout_height="80dp"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:text="@string/button_8"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/button_9"
                style="?android:attr/borderlessButtonStyle"
                android:layout_height="80dp"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:text="@string/button_9"
                android:textSize="30sp"/>

        </TableRow>


        <TableRow>

            <Button
                android:id="@+id/button_point"
                style="?android:attr/borderlessButtonStyle"
                android:layout_height="80dp"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:text="@string/button_point"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/button_0"
                style="?android:attr/borderlessButtonStyle"
                android:layout_height="80dp"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:text="@string/button_0"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/button_clear"
                style="?android:attr/borderlessButtonStyle"
                android:layout_height="80dp"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:text="@string/button_clear"
                android:textSize="30sp"/>


        </TableRow>

    </TableLayout>


</RelativeLayout>
